Fix description box on mobile

--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -22,8 +22,13 @@
 }
 
 #loc-box {
-    top: 180px;
     padding: 8px 15px;
+    transition: top 0.5s ease, bottom 0.5s ease;
+}
+
+.description-box {
+    max-height: 60vh;
+    overflow-y: auto
 }
 
 #main-box mat-form-field {
@@ -45,7 +50,7 @@
         height: calc(100vh - 56px);
     }
 
-    #main-box {
+    .floating-box {
         width: 80%;
         left: 50%;
         top: 75px;
